[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "immune-py"
version = "0.1.0"
description = "Self-healing immune system for Python applications"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "immune-py contributors" }]
keywords = ["security", "anomaly-detection", "self-healing", "monitoring", "production"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"

dependencies = [
    "scikit-learn>=1.4",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.9",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/youruser/immune-py"
Issues   = "https://github.com/youruser/immune-py/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["immune*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
